0.4.0 config migration (#8)